# DQA-system

./: README.md
backend/: pyproject.toml
backend/src/: app.py
backend/src/apis/: assessment.py  upload.py
backend/src/config/: db.py
backend/src/services/: pipeline.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: main.js
frontend/src/components/: CircularProgressBar.vue
frontend/src/components/Charts/: config.js
frontend/src/components/SidebarPlugin/: SideBar.vue
frontend/src/layout/starter/: Configurations.vue  HomePage.vue  ResultPage.vue  SampleFooter.vue  SampleLayout.vue  SampleNavbar.vue
frontend/src/router/: starterRouter.js
