[tool.poetry]
name = "dqa"
version = "0.1.0"
description = ""
authors = ["SL1015 <91118605+SL1015@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-cors = "^4.0.1"
scapy = "^2.5.0"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
pymongo = "^4.7.2"
scipy = "^1.13.1"
scikit-learn = "1.2.2"
itmo-fs = "^0.3.3"
qpsolvers = {extras = ["open-source-solvers"], version = "^4.3.2"}
joblib = "^1.4.2"
xgboost = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
